# mardiportal_research_theme_updater

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_locally.sh  workflow_arxiv_update.py  workflow_create_secrets.py  workflow_deploy_kubernetes.py  workflow_deploy_prefect.py  workflow_deploy_prefect.sh  workflow_main.py
.github/workflows/: docker-build.yml
docs/superpowers/plans/: 2026-06-20-thematic-research-overviews.md
maintenance/: backfill_arxiv_fulltext_lakefs.py  backfill_citations.py  dataset_importer.py  extract_formulas.py  merge_items.py
tests/: test_arxiv_oai.py  test_arxiv_search.py  test_arxiv_to_md.py  test_author_resolver.py  test_config.py  test_extract_formulas.py  test_keyworder.py  test_kg_client.py  test_lakefs_upload.py  test_llm_client.py  test_model_items.py  test_openalex.py  test_page_builder.py  test_pagedata.py  test_pipeline.py  test_pipeline_lakefs.py  test_publisher.py  test_sparql.py  test_state.py  test_summarizer.py  test_topic_classifier.py  test_topics.py  test_zbmath.py
tests/fixtures/: oai_listrecords.xml
topic_overviews/: __main__.py  arxiv_to_md.py  arxiv_update.py  config.py  http_utils.py  lakefs_upload.py  pipeline.py  state.py
topic_overviews/harvest/: arxiv_oai.py  arxiv_search.py  openalex.py  zbmath.py
topic_overviews/kg/: author_resolver.py  citation_linker.py  client.py  model.py  model_items.py  pagedata.py  sparql.py  topics.py
topic_overviews/llm/: client.py  keyworder.py  summarizer.py  topic_classifier.py
topic_overviews/wiki/: page_builder.py  publisher.py
(+1 files in other folders)
