[project]
name = "topic-overviews"
version = "0.1.0"
description = "Automated thematic research overviews for the MaRDI Knowledge Graph"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["topic_overviews*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
